# valechat

./: .gitignore  CHANGELOG.md  CLAUDE.md  CURRENT_STATUS.md  Cargo.toml  DISTRIBUTION.md  README.md  TUI_LIBRARY_COMPARISON.md  build.rs  deny.toml  index.html  package-lock.json  package.json  plan-improved.md  plan.md  tauri.conf.json  test_all_fixes.md  test_api_keys.js  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  maintenance.yml  release.yml
migrations/: 001_initial.sql
scripts/: build-all.sh  build-deb.sh  build-macos.sh  build-rpm.sh  build-windows.sh  generate-updater-keys.sh  setup-linux-repo.sh
src/: App.css  App.tsx  cli.rs  index.css  lib.rs  main.rs  main_tauri.rs.bak
src/app/: config.rs  mod.rs  state.rs
src/billing/: mod.rs
src/chat/: mod.rs  service.rs  types.rs
src/components/chat/: ChatWindow.css  ChatWindow.tsx  ConversationSidebar.tsx  InputArea.tsx  MessageItem.tsx  MessageList.tsx  ModelSelector.tsx  StreamingMessageItem.tsx
src/components/dashboard/: UsageDashboard.css  UsageDashboard.tsx
src/components/settings/: ApiKeySettings.css  ApiKeySettings.tsx  BillingSettings.tsx  GeneralSettings.tsx  MCPServerSettings.tsx  ModelProviderSettings.tsx  SettingsWindow.css  SettingsWindow.tsx
src/error/: mod.rs
src/mcp/: client.rs  error_recovery.rs  mod.rs  prompts.rs  protocol.rs  resources.rs  server_manager.rs  transport.rs  types.rs  validation.rs  websocket_transport.rs
src/models/: anthropic.rs  capability_detection.rs  circuit_breaker.rs  fallback.rs  gemini.rs  mod.rs  openai.rs  provider.rs  rate_limiter.rs
src/platform/: macos_keychain.rs  mod.rs  paths.rs  process.rs  secure_storage.rs
src/storage/: backup.rs  billing.rs  conversations.rs  cost_alerts.rs  dashboard.rs  database.rs  enforcement.rs  mod.rs  usage.rs
src/stores/: apiKeyStore.ts  billingStore.ts  chatStore.ts  settingsStore.ts
src/tui/: app.rs  commands.rs  events.rs  mod.rs  theme.rs
src/tui/components/: chat_view.rs  conversation_list.rs  cost_tracker.rs  help_popup.rs  input_box.rs  mod.rs  status_bar.rs
src/types/: index.ts
src/ui/: mod.rs
