[package]
name = "valechat"
version = "0.1.0"
edition = "2021"
authors = ["ValeChat Team <team@valechat.ai>"]
description = "Multi-model AI chat application with MCP server support"
homepage = "https://valechat.ai"
repository = "https://github.com/valechat/valechat"
license = "Apache-2.0"

[dependencies]
# TUI Framework
ratatui = "0.26"
crossterm = "0.27"
tui-input = "0.8"

# Async Runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP & WebSockets
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
url = "2.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Database - Fixed decimal handling
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "migrate"] }
rust_decimal = { version = "1.33", features = ["serde"] }

# Configuration & Platform Support
config = "0.14"
directories = "5.0"

# Cross-platform secure storage with biometric support
keyring = { version = "3.0", features = ["apple-native"] }

# macOS-specific dependencies for biometric authentication
[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3.0"
core-foundation = "0.10"

# Process management and sandboxing
tokio-process = "0.2"

# Error Handling & Circuit Breaker
anyhow = "1.0"
thiserror = "1.0"
tokio-retry = "0.3"
rand = "0.8"

# Logging & Monitoring
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# State Management
arc-swap = "1.6"
parking_lot = "0.12"

# Text Processing & Syntax Highlighting
syntect = "5.0"
pulldown-cmark = "0.10"
unicode-width = "0.1"

# Input Validation
validator = { version = "0.18", features = ["derive"] }
ammonia = "3.3"
regex = "1.10"

# CLI argument parsing
clap = { version = "4.0", features = ["derive"] }

# Async trait support
async-trait = "0.1"

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Base64 encoding for encryption
base64 = "0.22"

# Compression support for backups
flate2 = "1.0"

[dev-dependencies]
tempfile = "3.8"

[target.'cfg(unix)'.dependencies]
# Unix-specific dependencies for process management
libc = "0.2"
nix = { version = "0.27", features = ["process", "signal"] }

[target.'cfg(windows)'.dependencies]
# Windows-specific dependencies
windows = { version = "0.52", features = ["Win32_System_Threading"] }

# Remove build dependencies - no longer needed for TUI
